[package]
name = "cogs-box-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
tokio-tungstenite = "*"
tokio = { version = "1.42", features = ["full"] }
env_logger = "0.11.5"
async-trait = "0.1.83"
thiserror = "2.0.6"
bytebuffer = "2.3.0"
num_enum = "0.7.3"
futures-util = "0.3"
rand = "0.8.5"

[[bin]]
name = "cogs-box-relay"
path = "src/bin.rs"
